<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_gps"
        android:icon="@drawable/cur_my_location"
        android:title="get location"
        app:showAsAction="always"/>
    <item

        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/Logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/invites"
        android:orderInCategory="100"
        android:title="@string/Invites"
        app:showAsAction="never" />
    <item
        android:id="@+id/update_profile"
        android:orderInCategory="100"
        android:title="@string/update_profile"
        app:showAsAction="never" />

</menu>


